# SiprixUA

./: .gitignore  CMakeLists.txt  README.md  SiprixUA.cxx
linux/: cmake_Makefiles.sh
macos/: MacOSXBundleInfo.plist.in  cmake_XCode.sh
macos/siprix.framework/: siprix
macos/siprix.framework/Versions/1.0.0/Resources/: Info.plist
macos/siprix.framework/Versions/1.0.0/_CodeSignature/: CodeResources
win/: cmake_VS2022.bat
